--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.507.0",
+    "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
